[package]
name = "depthmerge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = "0.31.4"
ndarray = "0.15.6"
opencv = "0.74.2"
lstsq = "*"
kd-tree = {version="0.5.1",features=["nalgebra","rayon"]}
rayon = "1.6.1"
